--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,3 +1,7 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
   background: #eee;
   font-family: sans-serif;
@@ -6,22 +10,36 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 10px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  margin-top: 0px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 8px;
+  margin-top: -12px;
+  margin-bottom: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  display: block;
+  padding: 8px;
+  text-align: center;
+  align-content: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 8px 24px 8px 24px;
+  display: block;
+  margin: auto;
+  width: 150px;
 }
