--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,18 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  border: 4px solid orange;
+}
+
+.right-header, .left-header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 16px;
+  border: 2px solid red;
 }
 
 .profile-image {
@@ -27,6 +39,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  border: 2px solid red;
 }
 
 button {
@@ -45,4 +58,13 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  border: 2px solid cyan;
+  gap: 16px;
+}
+
+li {
+  border: 2px solid green;
 }
