--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.items {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.barberry, .chili, .lilac, .saffron {
+  text-align: center;
+}
+
+.text {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
