--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  padding: 10px;
 }
 
 img {
@@ -24,4 +25,35 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul, a {
+  list-style-type: none;
+  text-decoration: none;
+  color: black;
+}
+
+.header {
+  display: flex;
+}
+
+.footer {
+  display: flex;
+  align-items: flex-end;
+}
+
+.left-links {
+  display: flex;
+  gap: 16px;
+}
+
+.right-links {
+  display: flex;
+  gap: 16px;
+  justify-content: flex-end;
+  margin-left: auto;
+}
+
+.content {
+  text-align: center;
 }
