--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,65 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
+  font-size: 32px;
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight: 900;
+  padding-left: 16px;
+  display: flex;
+  align-items: center;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.content {
+  display: flex;
+  flex:1
 }
 
 .sidebar {
+  font-size: 24px;
   width: 300px;
   background: royalblue;
+  padding-left: 16px;
+  width: 300px;
+  display: flex;
+  flex-shrink:0;
+}
+
+.cards {
+  display: flex;
+  gap: 16px;
+  padding: 32px;
+  flex-wrap: wrap;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  flex: 0 1 auto;
+}
+
+ul, a {
+  text-decoration: none;
+  list-style-type: none;
+  color: white;
+  padding:0px;
 }
